@@ -18,6 +18,7 @@ S3method(print, data.table)
 S3method(as.data.table, data.table)
 S3method(as.data.table, data.frame)
 S3method(as.data.table, matrix)
+S3method(as.data.table, list)
 S3method(as.data.frame, data.table)
 S3method(as.matrix, data.table)
 #S3method(cbind, data.table)
